force-app/main/default/objects/ssot__Lead__dlm/fields/Apporteur_d_affaires_Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Apporteur_d_affaires_Prescripteur__c</fullName>
    <label>Apporteur d&apos;affaires / Prescripteur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Apporteur d&apos;affaires / Prescripteur</labelOverride>
        <masterLabel>Apporteur d&apos;affaires / Prescripteur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>