force-app/main/default/objects/ssot__Lead__dlm/fields/Code_Pays__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays__c</fullName>
    <label>Code Pays</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Code Pays</labelOverride>
        <masterLabel>Code Pays</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>