force-app/main/default/objects/ssot__Lead__dlm/fields/Commentaires_client__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_client__c</fullName>
    <label>Commentaires du client</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Commentaires du client</labelOverride>
        <masterLabel>Commentaires du client</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>