force-app/main/default/objects/ssot__Lead__dlm/fields/Conso_energie_valeur__c.field-meta.xml
<CustomField>
    <fullName>Conso_energie_valeur__c</fullName>
    <label>Consommation d&apos;énergie en valeur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Consommation d&apos;énergie en valeur</labelOverride>
        <masterLabel>Consommation d&apos;énergie en valeur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>