force-app/main/default/objects/ssot__Lead__dlm/fields/Date_fin_contrat_elec__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_contrat_elec__c</fullName>
    <label>Date de fin du contrat d&apos;électricité</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de fin du contrat d&apos;électricité</labelOverride>
        <masterLabel>Date de fin du contrat d&apos;électricité</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>