force-app/main/default/objects/ssot__Lead__dlm/fields/Date_fin_contrat_gaz__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_contrat_gaz__c</fullName>
    <label>Date de fin du contrat de gaz</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de fin du contrat de gaz</labelOverride>
        <masterLabel>Date de fin du contrat de gaz</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>