force-app/main/default/objects/ssot__Lead__dlm/fields/Date_Heure_soumission_formulaire__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_soumission_formulaire__c</fullName>
    <label>Date/Heure soumission formulaire</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date/Heure soumission formulaire</labelOverride>
        <masterLabel>Date/Heure soumission formulaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>