force-app/main/default/objects/ssot__Lead__dlm/fields/Dernier_Score__c.field-meta.xml
<CustomField>
    <fullName>Dernier_Score__c</fullName>
    <label>Dernier Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Dernier Score</labelOverride>
        <masterLabel>Dernier Score</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>