force-app/main/default/objects/ssot__Lead__dlm/fields/Enseigne__c.field-meta.xml
<CustomField>
    <fullName>Enseigne__c</fullName>
    <label>Enseigne</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Enseigne</labelOverride>
        <masterLabel>Enseigne</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>