force-app/main/default/objects/ssot__Lead__dlm/fields/Interesse_par_transition_energetique__c.field-meta.xml
<CustomField>
    <fullName>Interesse_par_transition_energetique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intéressé par transition énergétique ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Intéressé par transition énergétique ?</labelOverride>
        <masterLabel>Intéressé par transition énergétique ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>