force-app/main/default/objects/ssot__Lead__dlm/fields/Last_Modified_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Status_Date__c</fullName>
    <label>Last Modified Status Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Last Modified Status Date</labelOverride>
        <masterLabel>Last Modified Status Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>