force-app/main/default/objects/ssot__Lead__dlm/fields/PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>PDL_PCE__c</fullName>
    <label>PDL / PCE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PDL / PCE</labelOverride>
        <masterLabel>PDL / PCE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>