force-app/main/default/objects/ssot__Lead__dlm/fields/Provenance_via_le_site__c.field-meta.xml
<CustomField>
    <fullName>Provenance_via_le_site__c</fullName>
    <label>Provenance via le site</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Provenance via le site</labelOverride>
        <masterLabel>Provenance via le site</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>