force-app/main/default/objects/ssot__Lead__dlm/fields/Qualification_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Marketing__c</fullName>
    <label>Qualification Marketing</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Qualification Marketing</labelOverride>
        <masterLabel>Qualification Marketing</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>