force-app/main/default/objects/ssot__Lead__dlm/fields/Raison_de_l_Abandon__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_l_Abandon__c</fullName>
    <label>Raison de l&apos;Abandon</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Raison de l&apos;Abandon</labelOverride>
        <masterLabel>Raison de l&apos;Abandon</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>