force-app/main/default/objects/ssot__Lead__dlm/fields/Raison_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_la_demande__c</fullName>
    <label>Raison de la demande</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Raison de la demande</labelOverride>
        <masterLabel>Raison de la demande</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>