force-app/main/default/objects/ssot__Lead__dlm/fields/rel_1768312899381_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1768312899381_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_Lead_ssot_PartyId_map_ssot_Indi_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ssot_Lead_ssot_PartyId_map_ssot_Indi_rel</relationshipLabel>
    <relationshipName>rel_1768312899381_end</relationshipName>
    <type>Lookup</type>
</CustomField>