force-app/main/default/objects/ssot__Lead__dlm/fields/Secteur_d_activit__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activit__c</fullName>
    <label>Secteur d&apos;activité</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Secteur d&apos;activité</labelOverride>
        <masterLabel>Secteur d&apos;activité</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>