force-app/main/default/objects/ssot__Lead__dlm/fields/Service_Liste_Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Service_Liste_Prescripteur__c</fullName>
    <label>Service Liste Prescripteur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Service Liste Prescripteur</labelOverride>
        <masterLabel>Service Liste Prescripteur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>