force-app/main/default/objects/ssot__Lead__dlm/fields/Signataire__c.field-meta.xml
<CustomField>
    <fullName>Signataire__c</fullName>
    <label>Signataire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Signataire</labelOverride>
        <masterLabel>Signataire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>