force-app/main/default/objects/ssot__Lead__dlm/fields/Siren__c.field-meta.xml
<CustomField>
    <fullName>Siren__c</fullName>
    <label>Siren</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Siren</labelOverride>
        <masterLabel>Siren</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>