force-app/main/default/objects/ssot__Lead__dlm/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <label>Siret</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Siret</labelOverride>
        <masterLabel>Siret</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>