force-app/main/default/objects/ssot__Lead__dlm/fields/TECH_piste_jamais_chang__c.field-meta.xml
<CustomField>
    <fullName>TECH_piste_jamais_chang__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH piste jamais changé</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH piste jamais changé</labelOverride>
        <masterLabel>TECH piste jamais changé</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>