force-app/main/default/objects/ssot__Lead__dlm/fields/Titre_de_la_page_d_origine__c.field-meta.xml
<CustomField>
    <fullName>Titre_de_la_page_d_origine__c</fullName>
    <label>Titre de la page d&apos;origine</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Titre de la page d&apos;origine</labelOverride>
        <masterLabel>Titre de la page d&apos;origine</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>