force-app/main/default/objects/ssot__Lead__dlm/fields/Type_de_structure__c.field-meta.xml
<CustomField>
    <fullName>Type_de_structure__c</fullName>
    <label>Type de structure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type de structure</labelOverride>
        <masterLabel>Type de structure</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>