force-app/main/default/objects/ssot__Lead__dlm/fields/Type_energie__c.field-meta.xml
<CustomField>
    <fullName>Type_energie__c</fullName>
    <label>Type d&apos;énergie</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type d&apos;énergie</labelOverride>
        <masterLabel>Type d&apos;énergie</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>