force-app/main/default/objects/ssot__Lead__dlm/fields/Type_offre_selectionn_e__c.field-meta.xml
<CustomField>
    <fullName>Type_offre_selectionn_e__c</fullName>
    <label>Type offre selectionnée</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type offre selectionnée</labelOverride>
        <masterLabel>Type offre selectionnée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>