force-app/main/default/objects/ssot__Lead__dlm/fields/URL_de_la_page_origine__c.field-meta.xml
<CustomField>
    <fullName>URL_de_la_page_origine__c</fullName>
    <label>URL du formulaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>URL du formulaire</labelOverride>
        <masterLabel>URL du formulaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>