force-app/main/default/objects/ssot__Lead__dlm/fields/URL_de_la_page_prec_dente__c.field-meta.xml
<CustomField>
    <fullName>URL_de_la_page_prec_dente__c</fullName>
    <label>URL de la page précédente</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>URL de la page précédente</labelOverride>
        <masterLabel>URL de la page précédente</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>